{{$NEXT}}

0.0.14  2022-06-30T05:56:25+12:00
    - Remove HarfBuzz pre 1.7.7 compatibility
    - Remove CLib::strnlen. Just use nativecast() to convert
      buffers to strings

0.0.13  2022-06-29T08:46:17+12:00
    - Upload to zef ecosystem

0.0.12  2022-02-24T08:50:51+13:00
    - Drop minimum HarfBuzz version from 2.6.6 to 2.6.4 for
      stand-alone use of this module. Note that 3.0.0 is is needed
      if this is being installed as a HarfBuzz::Subset dependency.

0.0.11  2022-02-14T08:01:19+13:00
    - Deprecate Glyph codepoint() in favor of gid()
    - Add Glyph cluster method

0.0.10  2022-02-04T09:21:12+13:00
    - Add Shaper AT-KEY method for glyph retrieval
    - Fix test for Rakudo 2022.02+

0.0.9  2022-02-04T06:39:50+13:00
    - Fix for pending Rakudo 2022.02 release. niner++

0.0.8  2022-01-31T13:16:48+13:00
    - Add %ast<c> - cluster position to Glyph ast() method
    - Change hb_buffer add-text() method to use hb_buffer_add_codepoints()
      rather than 'hb_buffer_add_utf8(). This ensures that the cluster
      position (above) is mapped to a character position rather than an
      offset in a UTF-8 encoded buffer.

0.0.7  2021-04-30T16:45:57+12:00
    - Remove superfluous: Makefile.in, Build.pm and LibraryMake
      dependency

0.0.6  2021-02-23T05:54:04+13:00
    - Documentation link fixes for moved source project

0.0.5  2021-02-20T06:06:23+13:00
    - Moved source project pdf-raku -> harfbuzz-raku
    - Fix is-horizontal() and is-vertical() methods
    - Raise miminum HarfBuzz version to 2.6.6 #4

0.0.4  2021-02-16T13:28:36+13:00
    - Moved HarfBuzz::Shaper::Cairo and HarfBuzz::Font::FreeType
      from this distribution into seperate modules. This eliminates
      dependencies on Cairo and Font::FreeType modules.
    - Treating this module as experimental. It requires Debian
      11+ (buster) which is currently testing, for HarfBuzz v2.6.6+.

0.0.3  2021-02-06T06:50:03+13:00
    - Moved cairo-glyphs() method from HarfBuzz::Buffer to