@@ -1,4 +1,6 @@
 {{$NEXT}}
+    - Add scaled text-extents methods to HarfBuzz::Glyph:
+      x-bearing(), y-bearing(), width(), height()
 
 0.0.14  2022-06-30T05:56:25+12:00
     - Remove HarfBuzz pre 1.7.7 compatibility
